@@ -1,4 +1,9 @@
-# List install(1) components: FROM TO [MODE, default=755]
-# Without trailing slash: rename file TO. $PKG is documentation dir. Examples:
-#    binary usr/bin/bin-new
-#    README $PKG/doc/ 644
+# List install(1) components: FROM TO [MODE; for /bin/ defaults 755]
+# Without trailing slash: rename file TO. Vars: $PKG $VER DOC
+# Manual pages are automatically install, no destination needed.
+#
+#    program usr/bin/
+#    prg.sh  usr/bin/prg
+#    README  $DOC/ 644
+#    man.1
+
